feat: #155 StatisticsResponse 응답구조 변경
1. 24개 개별 필드 수동 작성 -> getHourlyRatesArray() 재활용

2. 래퍼클래스 제거

3. null체크 제거